fixed authorization header
